Added fancy homepage

--- a/war/index.html
+++ b/war/index.html
@@ -1,29 +1,44 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<!-- The HTML 4.01 Transitional DOCTYPE declaration-->
-<!-- above set at the top of the file will set     -->
-<!-- the browser's rendering engine into           -->
-<!-- "Quirks Mode". Replacing this declaration     -->
-<!-- with a "Standards Mode" doctype is supported, -->
-<!-- but may lead to some differences in layout.   -->
+<?xml version="1.0"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="cs" lang="cs">
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=windows-1250"/>
+    <meta http-equiv="content-language" content="cs" />
+    <meta name="robots" content="all,follow" />
+    <meta name="description" content="CGH Systems. It Consultancy, London, Sydney, Java, TDD, Agile, XP" />
+    <link rel="stylesheet" media="screen,projection" type="text/css" href="./css/cgh.css" />
+    <link rel="shortcut icon" href="ico.ico"/>
+    <title>CGH Systems - Home</title>
+</head>
 
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Admin Home</title>
-  </head>
+<body>
 
-  <body>
-    <h1>Admin Home</h1>
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="docs/DocumentsOverview.groovy">Documents Overview.</a></td>
-      </tr>
-      <tr>
-        <td><a href="invoice/InvoiceGenerator.groovy">Invoice Generator.</a></td>
-      </tr>
-    </table>
-  </body>
+<div class="main">
+
+<div id="logo"><h1>CGH Systems<span></span></h1></div>
+
+<div id="contact"><span>info@cghsystems.net | Tel: 07828030854</span></div>
+
+ <h2>What we do</h2>
+ <h2>What we do</h2>
+  <p>
+   CGH Systems are a small Software development consultancy who specialise in delivering bespoke software. We specialise in XP processes including Scrum and Agile.
+  </p>
+  <ul>
+    <li><a href="#">About this web site</a></li>
+    <li><a href="invoice/InvoiceGenerator.groovy">Admin</a></li>
+    <li><a href="#">Blog</a></li>
+  </ul>
+  <br />    
+
+  <h2>Our clients</h2>
+CGH Systems have carried out work for PCTFILER, Stan James and UBS Investment Bank
+  <br /><br />
+  
+ </div>
+<div class="footer">
+Copyright © 2008 CGH Systems.net 
+</div>
+
+ </div><!-- /main -->
+</body>
 </html>
