--- a/war/index.html
+++ b/war/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=windows-1250"/>
     <meta http-equiv="content-language" content="cs" />
     <meta name="robots" content="all,follow" />
-    <meta name="description" content="CGH Systems. It Consultancy, London, Sydney, Java, TDD, Agile, XP" />
+    <meta name="description" content="CGH Systems. IT Consultancy, London, Sydney, Java, TDD, Agile, XP" />
     <link rel="stylesheet" media="screen,projection" type="text/css" href="./css/cgh.css" />
     <link rel="shortcut icon" href="ico.ico"/>
     <title>CGH Systems - Home</title>
@@ -24,20 +24,20 @@
    CGH Systems are a small Software development consultancy who specialise in delivering bespoke software. We specialise in XP processes including Scrum and Agile.
   </p>
   <ul>
-    <li><a href="#">About this web site</a></li>
+    <li><a href="#">About this web site (coming soon)</a></li>
     <li><a href="invoice/InvoiceGenerator.groovy">Admin</a></li>
-    <li><a href="#">Blog</a></li>
+    <li><a href="#">Blog (coming soon)</a></li>
   </ul>
   <br />    
 
   <h2>Our clients</h2>
 CGH Systems have carried out work for PCTFILER, Stan James and UBS Investment Bank
-  <br /><br />
-  
+  <br /><br /> 
  </div>
-<div class="footer">
-Copyright © 2010 CGH Systems.net 
-</div>
+ 
+ <div class="footer">
+   Copyright © 2010 CGH Systems.net | <a href='#'>Legal</a> | <a href='#'>Site Map</a> | <a href='#'>Contact us</a> 
+ </div>
 
  </div><!-- /main -->
 </body>
