Fixed date format problem and email formatting problems

--- a/war/index.html
+++ b/war/index.html
@@ -16,7 +16,7 @@
 
 <div id="logo"><h1>CGH Systems<span></span></h1></div>
 
-<div id="contact"><span>info@cghsystems.net | Tel: 07828030854</span></div>
+<div id="contact"><span><a href="mailto:info@cghsystems.net">info@cghsystems.net</a> | Tel: 07828030854</span></div>
 
  <h2>What we do</h2>
  <h2>What we do</h2>
